# sec-sum

./: .gitignore  .pre-commit-config.yaml  EXAMPLE_SUMMARY.md  Makefile  README.md  pyproject.toml
src/sec_sum/: cli.py  config.py  parse_core.py  pipeline.py  summarizer.py
src/sec_sum/fetch/: archive.py  fetcher.py  ids.py  models.py  net.py  select.py  storage.py  submissions.py
tests/: test_cli.py
