[project]
name = "sec-sum"
version = "0.1.0"
description = "SEC 10-K/10-Q summarizer."
readme = "README.md"
requires-python = ">=3.13"
authors = [{name = "Carlos Eduardo M. De Oliveira"}]
license = {text = "MIT"}
dependencies = [
    "requests>=2.32.5",
]

[project.scripts]
sec-sum = "sec_sum.cli:main"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
ignore = ["E501"]
select = ["E","F","W","I","B","UP","SIM"]


[tool.ruff.lint.isort]
known-first-party = ["sec_sum"]
force-sort-within-sections = true

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
warn_return_any = true
warn_unused_ignores = true
mypy_path = "src"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.1",
    "types-requests>=2.32.4.20250913",
]
